RESOLVED FIXED12549
REGRESSION (r19312-r19336): Wrong character encoding at www.ravmilim.co.il
https://bugs.webkit.org/show_bug.cgi?id=12549
Summary REGRESSION (r19312-r19336): Wrong character encoding at www.ravmilim.co.il
mitz
Reported 2007-02-02 14:23:27 PST
The site comes up with the wrong encoding.
Attachments
test case (316 bytes, text/html)
2007-02-03 01:41 PST, Alexey Proskuryakov
no flags
proposed fix (3.05 KB, patch)
2007-02-03 02:34 PST, Alexey Proskuryakov
no flags
proposed fix (2.86 KB, patch)
2007-02-03 02:50 PST, Alexey Proskuryakov
mitz: review+
Alexey Proskuryakov
Comment 1 2007-02-03 01:41:50 PST
Created attachment 12893 [details] test case
Alexey Proskuryakov
Comment 3 2007-02-03 02:34:07 PST
Created attachment 12894 [details] proposed fix
Alexey Proskuryakov
Comment 4 2007-02-03 02:50:05 PST
Created attachment 12895 [details] proposed fix Mitz has suggested a cleaner approach.
mitz
Comment 5 2007-02-03 02:57:57 PST
Comment on attachment 12895 [details] proposed fix Please add a reference to the test to the WebCore change log. r=me
Alexey Proskuryakov
Comment 6 2007-02-03 03:03:36 PST
Committed revision 19384.
Note You need to log in before you can comment on or make changes to this bug.