        Reviewed by Mitz.

http://bugs.webkit.org/show_bug.cgi?id=12549
        Wrong character encoding at www.ravmilim.co.il

        Test: fast/encoding/meta-charset.html

        * loader/TextResourceDecoder.cpp:
        (WebCore::TextResourceDecoder::checkForHeadCharset): Fix an off by one error.



Canonical link: https://commits.webkit.org/16297@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19384 268f45cc-cd09-0410-ab3c-d52691b4dbfc